IT true de site the web سایت اینده

--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سایت اینده</title>
     <style>
+        audio {
+            width: 100px;
+            height: 100px;
+            max-width: 100px;
+        }
+
         @font-face {
             font-family: 'CustomFont';
             src: url('A-Iranian-Sans/Iranian-Sans.woff') format('woff'),
@@ -83,7 +89,7 @@
             </video>
             <br>
 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyw6ofY_Xv1ppBAwufl7XsnDwlis7T-qgZwA&s"
+            <img src="https://wallpapers.com/images/high/black-ops-3-1920-x-1080-wallpaper-qwjpzxa7bqwnac1o.webp"
                 alt="تصویر نمونه" width="100">
 
             <br>
@@ -93,6 +99,12 @@
                 src="https://webzi.ir/?utm_source=aparat&utm_medium=video&utm_campaign=introduce&utm_term=%D8%A8%D8%A7%D8%B2%D8%A7%D8%B1%DB%8C%D8%A7%D8%A8%DB%8C"
                 frameborder="0" width="600" height="400"></iframe>
             <br>
+            <audio controls>
+                <source src="Erfan Tahmasbi - Delgir (320).mp3" type="audio/mp3">
+                مرورگر شما از فایل صوتی پشتیبانی نمی‌کند.
+            </audio>
+
+            <br>
             <button onclick="window.open('https://sabzlearn.ir/', '_blank')">بازدید از سایت</button>
             <button
                 onclick="window.open('https://webzi.ir/?utm_source=aparat&utm_medium=video&utm_campaign=introduce&utm_term=%D8%A8%D8%A7%D8%B2%D8%A7%D8%B1%DB%8C%D8%A7%D8%A8%DB%8C')">بازدید
@@ -101,7 +113,7 @@
     </main>
 
     <footer>gmailپیام با: amirhoh.1394@gmail.com</footer>
-    
+
 </body>
 
 </html>
