--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سایت آینده</title>
+    <style>
+        header {
+    background-color: rgb(255, 217, 1);
+    padding: 20px;
+    font-size: 24px;
+
+    text-align: center;
+
+}
+
+p {
+    color: brown;
+    text-align: center;
+    background-color: wheat;
+    padding: 2px;
+    width: auto;
+    height: 50px;
+    font-size: 24px;
+}
+
+img {
+    width: 250px;
+    height: 150px;
+
+}
+
+body {
+    background-color: navy;
+}
+
+a {
+    color: black;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 2px;
+}
+
+@font-face {
+    font-family: 'CustomFont';
+    src: url('A-Iranian-Sans/Iranian-Sans.woff') format('woff'),
+        url('A-Iranian-Sans/Iranian-Sans.woff2') format('woff2');
+}
+
+body {
+    font-family: 'CustomFont', sans-serif;
+}
+    </style>
 </head>
 
 <body>
