--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 
 <head>
     <style>
+        
         @import url('https://fonts.googleapis.com/css2?family=Vazir&display=swap');
         @keyframes slideDown {
     from {
@@ -14,6 +15,10 @@
         opacity: 1;
     }
 }
+@font-face {
+            font-family: 'CustomFont';
+            src: url('A-Iranian-Sans/Iranian-Sans.woff') format('woff'),
+                url('A-Iranian-Sans/Iranian-Sans.woff2') format('woff2');
 
 .animated-header {
     animation: slideDown 1.5s ease-in-out;
@@ -150,6 +155,12 @@ button:hover {
         transform: translateY(0);
     }
 }
+body {
+            font-family: 'CustomFont', sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f5f5f5;
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
