--- a/index4.html
+++ b/index4.html
@@ -47,19 +47,19 @@ body{
     <title>سایت اینده</title>
 </head>
 <body>
-<header>به سایت اینده خوش امدید بهترین سایت امن برای شما اراعه شده است</header>
+<header dir="rtl">به سایت اینده خوش امدید بهترین سایت امن برای شما اراعه شده است</header>
 <br>
 <div>
 <iframe src="https://github.com/amirhossen1394" height="200" width="300" title="Iframe Example"></iframe>
 <img src="https://as1.ftcdn.net/v2/jpg/10/95/54/12/1000_F_1095541217_u5I6bN6RL4fIH5S1h26Oa4bD6uIbDFQd.jpg" alt="">
 <br>
-<a href="https://github.com">لینک  گیتهاب</a>
+<a href="https://github.com" dir="rtl">لینک  گیتهاب</a>
 <br>
 <a href="https://github.com">GitHub link</a>
 
 </div>
 <br>
-<p class="p2">
+<p class="p2" dir="rtl">
     از گیتهاب رایگان هاست بگیرید
 </p>
 <br>
@@ -67,7 +67,7 @@ body{
     Get free hosting from GitHub
 </p>
 <br>
-<p class="p1">
+<p class="p1" dir="rtl">
     فقط سایت نه همه ی برنامه نویسی ها
 </p>
 <br>
